--- a/utils/pypfopt_Markowitz.ipynb
+++ b/utils/pypfopt_Markowitz.ipynb
@@ -500,10 +500,17 @@
     },
     "kernelspec": {
       "display_name": "Python 3",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.8.5"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "2469a70536e4d2335a2ea8907942d0699c37342a371ac185bdb5b0aa6f073890"
+      }
     }
   },
   "nbformat": 4,
