new Markowitz add

--- a/notebooks/Markowitz_pypfopt.ipynb
+++ b/notebooks/Markowitz_pypfopt.ipynb
@@ -232,7 +232,7 @@
         }
       ],
       "source": [
-        "df = pd.read_csv('mvp_data.csv', parse_dates=True, index_col=0)\n",
+        "df = pd.read_csv('../data/mvp_data.csv', parse_dates=True, index_col=0)\n",
         "df.columns = ['EUR', 'GOLD', 'Bitcoin', 'Apple', 'Exxon', 'VISA', 'Oil']\n",
         "# заполним пропуски последними известными значениями, так как пропуски чаще всего - это праздничные периоды\n",
         "# перейдем на недельный интервал и средним значениям на них\n",
