--- a/notebooks/monte_carlo.ipynb
+++ b/notebooks/monte_carlo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,140 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>EUR</th>\n",
-       "      <th>GOLD</th>\n",
-       "      <th>Bitcoin</th>\n",
-       "      <th>Apple</th>\n",
-       "      <th>Exxon</th>\n",
-       "      <th>VISA</th>\n",
-       "      <th>Oil</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2020-01-05</th>\n",
-       "      <td>1.117144</td>\n",
-       "      <td>1549.199951</td>\n",
-       "      <td>7344.884277</td>\n",
-       "      <td>72.735321</td>\n",
-       "      <td>58.564049</td>\n",
-       "      <td>185.520187</td>\n",
-       "      <td>63.049999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-01-12</th>\n",
-       "      <td>1.111111</td>\n",
-       "      <td>1557.500000</td>\n",
-       "      <td>8166.554199</td>\n",
-       "      <td>75.889969</td>\n",
-       "      <td>57.573124</td>\n",
-       "      <td>189.600433</td>\n",
-       "      <td>59.040001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-01-19</th>\n",
-       "      <td>1.113958</td>\n",
-       "      <td>1558.800049</td>\n",
-       "      <td>8929.038086</td>\n",
-       "      <td>77.944138</td>\n",
-       "      <td>57.090160</td>\n",
-       "      <td>200.295197</td>\n",
-       "      <td>58.540001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-01-26</th>\n",
-       "      <td>1.105522</td>\n",
-       "      <td>1571.099976</td>\n",
-       "      <td>8445.434570</td>\n",
-       "      <td>77.841423</td>\n",
-       "      <td>55.224911</td>\n",
-       "      <td>200.588791</td>\n",
-       "      <td>54.189999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-02-02</th>\n",
-       "      <td>1.102913</td>\n",
-       "      <td>1582.900024</td>\n",
-       "      <td>9350.529297</td>\n",
-       "      <td>75.689430</td>\n",
-       "      <td>51.727554</td>\n",
-       "      <td>194.688538</td>\n",
-       "      <td>51.560001</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 EUR         GOLD      Bitcoin      Apple      Exxon  \\\n",
-       "Date                                                                   \n",
-       "2020-01-05  1.117144  1549.199951  7344.884277  72.735321  58.564049   \n",
-       "2020-01-12  1.111111  1557.500000  8166.554199  75.889969  57.573124   \n",
-       "2020-01-19  1.113958  1558.800049  8929.038086  77.944138  57.090160   \n",
-       "2020-01-26  1.105522  1571.099976  8445.434570  77.841423  55.224911   \n",
-       "2020-02-02  1.102913  1582.900024  9350.529297  75.689430  51.727554   \n",
-       "\n",
-       "                  VISA        Oil  \n",
-       "Date                               \n",
-       "2020-01-05  185.520187  63.049999  \n",
-       "2020-01-12  189.600433  59.040001  \n",
-       "2020-01-19  200.295197  58.540001  \n",
-       "2020-01-26  200.588791  54.189999  \n",
-       "2020-02-02  194.688538  51.560001  "
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.read_csv('../data/mvp_data.csv', parse_dates=True, index_col=0)\n",
-    "tickers = ['EUR', 'GOLD', 'Bitcoin', 'Apple', 'Exxon', 'VISA', 'Oil']\n",
-    "df.columns = tickers\n",
-    "# заполним пропуски последними известными значениями, так как пропуски чаще всего - это праздничные периоды\n",
-    "# перейдем на недельный интервал и средним значениям на них\n",
-    "df_w = df.fillna(method='ffill').resample('W').ffill()\n",
-    "df_w.head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -261,258 +128,40 @@
        "2020-02-09 -0.024050  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# % понедельная доходность\n",
+    "df = pd.read_csv('../data/datasets/mvp_data.csv', parse_dates=True, index_col=0)\n",
+    "tickers = ['EUR', 'GOLD', 'Bitcoin', 'Apple', 'Exxon', 'VISA', 'Oil']\n",
+    "df.columns = tickers\n",
+    "df_w = df.fillna(method='ffill').resample('W').ffill()\n",
     "df_w_pct = df_w.pct_change().iloc[1:]\n",
     "df_w_pct.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "EUR       -0.000230\n",
-       "GOLD       0.001312\n",
-       "Bitcoin    0.010368\n",
-       "Apple      0.004751\n",
-       "Exxon      0.005587\n",
-       "VISA       0.001632\n",
-       "Oil        0.004626\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# средняя доходность по активам\n",
-    "mean_returns = df_w_pct.mean()\n",
-    "mean_returns"
+    "train_df = df_w_pct[:'2021-12-31'] # 2020-2021\n",
+    "test_df = df_w_pct['2022-01-01':] # 2022"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>EUR</th>\n",
-       "      <th>GOLD</th>\n",
-       "      <th>Bitcoin</th>\n",
-       "      <th>Apple</th>\n",
-       "      <th>Exxon</th>\n",
-       "      <th>VISA</th>\n",
-       "      <th>Oil</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>EUR</th>\n",
-       "      <td>0.000142</td>\n",
-       "      <td>0.000103</td>\n",
-       "      <td>0.000140</td>\n",
-       "      <td>0.000177</td>\n",
-       "      <td>0.000103</td>\n",
-       "      <td>0.000171</td>\n",
-       "      <td>0.000054</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GOLD</th>\n",
-       "      <td>0.000103</td>\n",
-       "      <td>0.000564</td>\n",
-       "      <td>0.000447</td>\n",
-       "      <td>0.000274</td>\n",
-       "      <td>0.000232</td>\n",
-       "      <td>0.000199</td>\n",
-       "      <td>0.000313</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Bitcoin</th>\n",
-       "      <td>0.000140</td>\n",
-       "      <td>0.000447</td>\n",
-       "      <td>0.010059</td>\n",
-       "      <td>0.000836</td>\n",
-       "      <td>0.001392</td>\n",
-       "      <td>0.000668</td>\n",
-       "      <td>0.001661</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Apple</th>\n",
-       "      <td>0.000177</td>\n",
-       "      <td>0.000274</td>\n",
-       "      <td>0.000836</td>\n",
-       "      <td>0.002072</td>\n",
-       "      <td>0.000594</td>\n",
-       "      <td>0.001202</td>\n",
-       "      <td>0.000492</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Exxon</th>\n",
-       "      <td>0.000103</td>\n",
-       "      <td>0.000232</td>\n",
-       "      <td>0.001392</td>\n",
-       "      <td>0.000594</td>\n",
-       "      <td>0.003147</td>\n",
-       "      <td>0.000894</td>\n",
-       "      <td>0.002551</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VISA</th>\n",
-       "      <td>0.000171</td>\n",
-       "      <td>0.000199</td>\n",
-       "      <td>0.000668</td>\n",
-       "      <td>0.001202</td>\n",
-       "      <td>0.000894</td>\n",
-       "      <td>0.001842</td>\n",
-       "      <td>0.000652</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Oil</th>\n",
-       "      <td>0.000054</td>\n",
-       "      <td>0.000313</td>\n",
-       "      <td>0.001661</td>\n",
-       "      <td>0.000492</td>\n",
-       "      <td>0.002551</td>\n",
-       "      <td>0.000652</td>\n",
-       "      <td>0.006160</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              EUR      GOLD   Bitcoin     Apple     Exxon      VISA       Oil\n",
-       "EUR      0.000142  0.000103  0.000140  0.000177  0.000103  0.000171  0.000054\n",
-       "GOLD     0.000103  0.000564  0.000447  0.000274  0.000232  0.000199  0.000313\n",
-       "Bitcoin  0.000140  0.000447  0.010059  0.000836  0.001392  0.000668  0.001661\n",
-       "Apple    0.000177  0.000274  0.000836  0.002072  0.000594  0.001202  0.000492\n",
-       "Exxon    0.000103  0.000232  0.001392  0.000594  0.003147  0.000894  0.002551\n",
-       "VISA     0.000171  0.000199  0.000668  0.001202  0.000894  0.001842  0.000652\n",
-       "Oil      0.000054  0.000313  0.001661  0.000492  0.002551  0.000652  0.006160"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# ковариационная матрица\n",
-    "cov_matrix = df_w_pct.cov()\n",
-    "cov_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.1429])"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# получим инициирующие веса простым делением\n",
     "num_assets = len(tickers)\n",
-    "start_weight = round(1/num_assets, 4)\n",
-    "# start_weight_eq = round(1 - (num_assets - 1) * start_weight,  4) # для уравнивания последнего веса\n",
-    "matrix_weight = np.full(7, start_weight)\n",
-    "matrix_weight"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.12505580148512394"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "portfolio_return_start = np.sum(mean_returns * matrix_weight)\n",
-    "portfolio_std_dev_start = np.sqrt(np.dot(matrix_weight.T,np.dot(cov_matrix, matrix_weight)))\n",
-    "sharp_start = portfolio_return_start/portfolio_std_dev_start\n",
-    "sharp_start"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            Start\n",
-      "RETURN   0.004008\n",
-      "stdev    0.032048\n",
-      "Sharpe   0.125056\n",
-      "EUR      0.142900\n",
-      "GOLD     0.142900\n",
-      "Bitcoin  0.142900\n",
-      "Apple    0.142900\n",
-      "Exxon    0.142900\n",
-      "VISA     0.142900\n",
-      "Oil      0.142900\n"
-     ]
-    }
-   ],
-   "source": [
-    "# объединим полученные значения в таблицу и выведем ее \n",
-    "start_result = np.array([portfolio_return_start, portfolio_std_dev_start, sharp_start])\n",
-    "start_result = np.array([portfolio_return_start, portfolio_std_dev_start, sharp_start])\n",
-    "start_result = np.concatenate((start_result, matrix_weight), axis=0)\n",
-    "# СДЕЛАТЬ РАЦИОНАЛЬНЕЕ\n",
-    "start_sim_result = pd.DataFrame(start_result, columns=['Start'], index=['RETURN','stdev','Sharpe', tickers[0], tickers[1], tickers[2], tickers[3], tickers[4], tickers[5], tickers[6]])\n",
     "\n",
-    "print(start_sim_result) "
+    "mean_returns = train_df.mean()\n",
+    "cov_matrix = train_df.cov()\n"
    ]
   },
   {
@@ -525,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,8 +183,8 @@
     "simulations = np.zeros((4 + len(tickers)- 1, num_iter))\n",
     "\n",
     "for i in range(num_iter):\n",
-    "        # случайные веса + нормализация, чтоб сумма 1\n",
-    "        weights = np.array(np.random.random(7))\n",
+    "        # случайные веса + нормализация, чтобы сумма 1\n",
+    "        weights = np.array(np.random.random(num_assets))\n",
     "        weights /= np.sum(weights)\n",
     "        \n",
     "        # доходность и стандартное отклонение\n",
@@ -558,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -566,17 +215,17 @@
      "output_type": "stream",
      "text": [
       "Портфель с макс. Шарпом:\n",
-      "RETURN     0.004801\n",
-      "stdev      0.033341\n",
-      "Sharpe     0.143998\n",
-      "EUR        0.029989\n",
-      "GOLD       0.239391\n",
-      "Bitcoin    0.166671\n",
-      "Apple      0.272750\n",
-      "Exxon      0.222688\n",
-      "VISA       0.030447\n",
-      "Oil        0.038065\n",
-      "Name: 547, dtype: float64\n"
+      "RETURN     0.010494\n",
+      "stdev      0.039072\n",
+      "Sharpe     0.268585\n",
+      "EUR        0.007260\n",
+      "GOLD       0.318395\n",
+      "Bitcoin    0.272878\n",
+      "Apple      0.296706\n",
+      "Exxon      0.022542\n",
+      "VISA       0.056314\n",
+      "Oil        0.025904\n",
+      "Name: 880, dtype: float64\n"
      ]
     }
    ],
@@ -587,12 +236,15 @@
     "# минимальное ст. отклонение\n",
     "min_std = df_sim.iloc[df_sim['stdev'].idxmin()]\n",
     "\n",
+    "# максимальная прибыль\n",
+    "max_profit = df_sim.iloc[df_sim['RETURN'].idxmax()]\n",
+    "\n",
     "print (\"Портфель с макс. Шарпом:\", max_sharpe, sep='\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -600,17 +252,17 @@
      "output_type": "stream",
      "text": [
       "Портфель с мин. риском:\n",
-      "RETURN     0.001217\n",
-      "stdev      0.018136\n",
-      "Sharpe     0.067111\n",
-      "EUR        0.375118\n",
-      "GOLD       0.310509\n",
-      "Bitcoin    0.001461\n",
-      "Apple      0.097064\n",
-      "Exxon      0.011161\n",
-      "VISA       0.196968\n",
-      "Oil        0.007718\n",
-      "Name: 210, dtype: float64\n"
+      "RETURN     0.003223\n",
+      "stdev      0.022334\n",
+      "Sharpe     0.144327\n",
+      "EUR        0.301951\n",
+      "GOLD       0.221720\n",
+      "Bitcoin    0.010542\n",
+      "Apple      0.195620\n",
+      "Exxon      0.048282\n",
+      "VISA       0.214250\n",
+      "Oil        0.007634\n",
+      "Name: 268, dtype: float64\n"
      ]
     }
    ],
@@ -620,10 +272,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Портфель с макс. прибылью:\n",
+      "RETURN     0.014166\n",
+      "stdev      0.058851\n",
+      "Sharpe     0.240714\n",
+      "EUR        0.014223\n",
+      "GOLD       0.110647\n",
+      "Bitcoin    0.472784\n",
+      "Apple      0.163474\n",
+      "Exxon      0.147978\n",
+      "VISA       0.006129\n",
+      "Oil        0.084766\n",
+      "Name: 987, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"Портфель с макс. прибылью:\", max_profit, sep='\\n') # не всегда совпадает с макс. шарпом"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# сохраняем модель\n",
+    "# df_sim.to_pickle('model_monte_carlo.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3183.95"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(max_sharpe.GOLD * 10000, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RETURN     0.014166\n",
+       "stdev      0.058851\n",
+       "Sharpe     0.240714\n",
+       "EUR        0.014223\n",
+       "GOLD       0.110647\n",
+       "Bitcoin    0.472784\n",
+       "Apple      0.163474\n",
+       "Exxon      0.147978\n",
+       "VISA       0.006129\n",
+       "Oil        0.084766\n",
+       "Name: 987, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_profit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[130.11, 140.74, 327.12]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# проверки по модели\n",
+    "model = pd.read_pickle('../models/model_monte_carlo.pkl')\n",
+    "portfolio = model.iloc[model['Sharpe'].idxmax()]\n",
+    "depo = 1000\n",
+    "[round(portfolio.EUR * depo, 2), round(portfolio.GOLD * depo, 2), round(portfolio.Bitcoin * depo, 2)]"
+   ]
   }
  ],
  "metadata": {
