--- a/notebooks/Markowitz_pypfopt.ipynb
+++ b/notebooks/Markowitz_pypfopt.ipynb
@@ -421,7 +421,7 @@
         "latest_prices = get_latest_prices(df_w)\n",
         "allocation_minvol, rem_minvol = DiscreteAllocation(portf_minvol, latest_prices, total_portfolio_value=1000000).lp_portfolio() \n",
         "print(allocation_minvol)\n",
-        "print(\"Осталось средств после построения портфеля с минимальной волатильностью - {:.2f} USD\".format(rem_minv))\n",
+        "print(\"Осталось средств после построения портфеля с минимальной волатильностью - {:.2f} USD\".format(rem_minvol))\n",
         "print()"
       ]
     },
