--- a/notebooks/monte_carlo_2.ipynb
+++ b/notebooks/monte_carlo_2.ipynb
@@ -458,7 +458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ..."
+    "## ГЕНЕРАЦИЯ ПОРТФЕЛЕЙ И ПОИСК ЛУЧШЕГО"
    ]
   },
   {
@@ -510,11 +510,11 @@
     "\n",
     "min_risk = np.argmin(riskN)\n",
     "plt.scatter([(riskN[min_risk])*100],[(gainN[min_risk])*100],\n",
-    "            c='r', marker='*', label='минимальный риск')\n",
+    "            c='g', marker='o', label='минимальный риск')\n",
     "\n",
     "maxSharpe = np.argmax(gainN/riskN)\n",
     "plt.scatter([riskN[maxSharpe]*100], [gainN[maxSharpe]*100],\n",
-    "            c='g', marker='o', label='максимальный коэф. Шарпа')\n",
+    "            c='r', marker='o', label='максимальный коэф. Шарпа')\n",
     "\n",
     "portf_mean = np.ones(numAssets)/numAssets\n",
     "risk_mean = RISKportf(portf_mean)\n",
@@ -659,6 +659,13 @@
     "print(pd.DataFrame([portf_mean*100], columns=train_df.columns, index=['доли, %']).T)\n",
     "print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
